--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -55,7 +55,7 @@ body {
     display: inline-block;
     padding: 11px 35px;
     border: 1px solid transparent;
-
+    display: block;
     &.btn__hero {
         background: #F9BF29;
         color: #2F2F2F;
@@ -82,6 +82,7 @@ body {
     &.btn__section {
         background: #2F2F2F;
         color: white;
+        transition: .3s all;
         &:hover {
             background: #F9BF29;
             color: #2F2F2F;
