--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,4 +1,131 @@
 // Footer
 footer {
-    display: block;
+    background: #fff;
+}
+.footer {
+    display: flex;
+    gap: 60px;
+    @media(max-width: $breakpoint992) {
+        gap: 30px;
+    }
+    @media(max-width: $breakpoint768) {
+        flex-wrap: wrap;
+    }
+    &__logo {
+        margin-bottom: 17px;
+        display: flex;
+    }
+    &__text,
+    &__link {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: #6A6A6A;
+    }
+    &__item {
+        // .footer__item
+        &.left__item {
+            flex: 0 1 360px;
+            @media(max-width: $breakpoint768) {
+                flex: 0 1 100%;
+            }
+        }
+        &.right__item {
+            display: flex;
+            gap: 50px;
+            @media(max-width: $breakpoint992) {
+                gap: 30px;
+            }
+            @media(max-width: $breakpoint768) {
+                flex: 0 1 100%;
+            }
+            @media(max-width: $breakpoint480) {
+                flex-wrap: wrap;
+                gap: 15px;
+            }
+        }
+    }
+    &__links {
+        @media(max-width: $breakpoint768) {
+            flex: 0 1 20%;
+        }
+        @media(max-width: $breakpoint480) {
+            flex: 0 1 45%;
+        }
+    }
+    &__link {
+        line-height: 28px;
+        transition: color .3s;
+        &:hover {
+            color: #385d50;
+        }
+    }
+}
+.social {
+    display: flex;
+    gap: 11px;
+    margin-top: 60px;
+    @media(max-width: $breakpoint768) {
+        margin-top: 20px;
+    }
+    &__item {
+        a {
+            border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #D9D9D9;
+        width: 41px;
+        height: 41px;
+        cursor: pointer;
+        transition: all .3s;
+        svg {
+            transition: all .3s;
+        }
+        &:hover {
+            svg {
+                scale: 1.2;
+                path {
+                    fill: #fff;
+                }
+            }
+            background-color: #385d50;
+        }
+        }
+    }
+}
+.copy {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #EFF2F1;
+    margin-top: 32px;
+    padding-bottom: 32px;
+    @media(max-width: $breakpoint768) {
+        flex-wrap: wrap;
+        padding-bottom: 20px;
+        margin-top: 20px;
+    }
+    &__item {
+        margin-top: 32px;
+        display: flex;
+        align-items: center;
+        gap: 40px;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: #6A6A6A;
+    }
+    &__link {
+        font-size: 14px;
+        text-align: right;
+        color: #6A6A6A;
+        transition: color .3s;
+        &:hover {
+            color: #385d50;
+        }
+    }
 }
